fix: check echo server