@@ -126,6 +126,51 @@
          includes="**/*.class"
          manifest="${jar.manifest}"></jar>
   </target>
+  <target name="runecho"
+          depends="loadclasspath">
+    <description>Run target</description>
+    <java fork="true"
+          classname="${main.class1}"
+          module="${module}"
+          spawn="true">
+      <jvmarg value="--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED" />
+      <jvmarg value="--add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED" />
+      <jvmarg value="--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED" />
+      <jvmarg value="--add-exports=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED" />
+      <jvmarg value="--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED" />
+      <jvmarg value="--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED" />
+      <modulepath>
+        <pathelement location="${runclasspath}" />
+        <pathelement location="${dist.dir}\${ant.project.name}-${version}.jar" />
+      </modulepath>
+    </java>
+    <sleep seconds="10" />
+    <telnet port="8080"
+            server="localhost"
+            timeout="20">
+      <write>Hello</write>
+      <read>Hello</read>
+      <write>Hello, again!</write>
+      <read>Hello, again!</read>
+      <write />
+    </telnet>
+    <exec executable="jps">
+      <arg value="-l" />
+      <redirector outputproperty="process.pid">
+        <outputfilterchain>
+          <linecontains>
+            <contains value="${module}/${main.class1}" />
+          </linecontains>
+          <replacestring from=" ${module}/${main.class1}" />
+        </outputfilterchain>
+      </redirector>
+    </exec>
+    <exec executable="kill"
+          osfamily="unix">
+      <arg value="-9" />
+      <arg value="${process.pid}" />
+    </exec>
+  </target>
   <target name="run"
           depends="loadclasspath">
     <description>Run target</description>
@@ -149,16 +194,16 @@
             server="localhost"
             timeout="20">
       <write>Hello</write>
-      <write />
+      <write>Hello, again!</write>
     </telnet>
     <exec executable="jps">
       <arg value="-l" />
       <redirector outputproperty="process.pid">
         <outputfilterchain>
           <linecontains>
-            <contains value="netty/netty.DiscardServer" />
+            <contains value="${module}/${main.class}" />
           </linecontains>
-          <replacestring from=" netty/netty.DiscardServer" />
+          <replacestring from=" ${module}/${main.class}" />
         </outputfilterchain>
       </redirector>
     </exec>
@@ -321,16 +366,19 @@
           depends="compile, pmd, spotbugs,jar,docs">
     <description>Main target</description>
   </target>
-  <target name="jlink"
-          depends="jar">
+  <target name="jlink">
     <jmod destfile="${jmod.name}"
-          classpath="${dist.dir}\${ant.project.name}-${version}.jar" />
+          classpath="${dist.dir}\${ant.project.name}-${version}.jar:${runclasspath}" />
     <link destDir="build/image"
-          modulepath="${jmod.name}"
-          modules="${module}">
+          modulepath="${jmod.name}">
       <launcher name="${launcher.name}"
                 module="${module}"
                 mainClass="${main.class}" />
+      <launcher name="${launcher.name1}"
+                module="${module}"
+                mainClass="${main.class1}" />
+      <module name="${module}" />
+      <module name="netty.all" />
     </link>
   </target>
 </project>
